--- a/package.json
+++ b/package.json
@@ -1,12 +1,6 @@
 {
   "dependencies": {
-    "ai": "^1.1.0",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "open": "^9.0.0",
-    "openai": "^3.2.1",
-    "openai-api": "^1.3.1",
-    "openai-nodejs": "^1.1.0"
+    "dotenv": "^16.4.5"
   }
 }
